themes/Material-T/source/css/_custom/custom.styl
// Custom styles

.iseeu.highlight{
  -webkit-overflow-scrolling: touch;
}

// post hover
.row.mb-4.mx-auto {
  transition: background .5s, transform .5s;
  position relative
  z-index 1
}
.row.mb-4.mx-auto:hover {
  * {
    color: #20c997;
  }

  background-color:rgba(0, 0, 0, .8);
  background-image:
  radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
  radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
  radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
  radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
  background-size:200px 200px, 1800px 180px, 120px 120px, 80px 80px; 
  background-position: 0 0, 20px 30px, 60px 120px, 30px 50px;

  transform: translateY(-10px)
  box-shadow: 4px 4px 20px rgba(32,201,151, .3)!important;

  animation: postCardBackground 100s ease infinite
}

@keyframes postCardBackground {
  0% {
    background-position: 0 0, 20px 30px, 60px 120px, 30px 50px;
  }

  100% {
    background-position: 0 0, 2000px 3000px, 6000px 12000px, 3000px 5000px;
  }
}


// 署名
.note.note-warning {
  background-color: rgba(32,201,151,0.05);
  border-left: 4px solid rgba(32,201,151,0.25);
  border-radius: 4px;
}

// about page
.about-avatar + .container {
  .markdown-body {
    text-align: center
  }
}
// 文章hr样式
.post-content.mx-auto {
  overflow hidden
}
.markdown-body {
  hr {
    height 2px
    background rgba(32, 201, 151, 0.2)
    width 1000%
    margin-top 0
    margin-bottom 20px
  }
  h3 {
    margin-bottom 8px
  }
  p {
    line-height 26px
    font-size 15px
  }
}
#page_uv_container {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;

  .icon {
    margin-right 6px
  }
}

#busuanzi_value_site_uv,
#busuanzi_value_site_pv,
#busuanzi_value_page_pv {
  display none
}
.mt-5
  position relative

.row {
  padding 1rem .5rem
}

.top-nav-collapse {
  background-color rgba(0, 0, 0, .7)
}

.navbar-col-show {
  background-color rgba(0, 0, 0, .4)
}

.top-nav-collapse {
  background #000
  opacity 0.7
}

.index-excerpt {
  .index-text.mb-1 {
    font-size 14px
  }
}

.col-12.col-md-8.m-auto {
  font-size 14px
}

#tocbot {
  .tocbot-list {
    li {
      margin: 8px 0;
      font-size: 14px;
    }
  }
}

.container {
  .row.mb-4.mx-auto {
    box-shadow: 2px 2px 20px rgba(0,0,0,.1);
    border-radius: 6px;
  }

  .category-tree-list {
    list-style none
    padding-left 0
  }

  .category-tree-list-item {
    border-bottom 1px solid #dfe2e5
    padding 10px
  }

  .list-group-item.list-group-item-action {
    border 1px solid #dfe2e5!important
  }
}

figure.iseeu.highlight {
  overflow auto
}

* {
  box-sizing border-box
}

.base-cube {
  height: 15rem;
  left: 50%;
  margin: -7.5rem;
  padding: 3rem;
  position: absolute;
  top: 25%;
  width: 15rem;
  transform: rotateX(45deg) rotateZ(45deg);
  transform-style: preserve-3d;

  .cube,
  .cube:after,
  .cube:before {
    content: '';
    float: left;
    height: 3rem;
    position: absolute;
    width: 3rem;
  }

  /* Top */
  .cube {
    background-color: rgba(0, 0, 0, .6);
    position: relative;
    transform: translateZ(3rem);
    transform-style: preserve-3d;
    transition: .25s;
    box-shadow: 24rem 24rem 1.5rem rgba(0, 0, 0, 0.5);
    animation: anim 1s infinite;
    // animation-timing-function: cubic-bezier(0.25 , 0.5, 0.75, 1)
    animation-timing-function: ease-in-out

    box-sizing border-box
    display: flex
    justify-content: center
    align-items: center
    color red
    font-weight: bold

    div {
      transform: rotateZ(-45deg);
    }
  }
  .cube:after {
    background-color: rgba(20, 20, 20, .6);
    transform: rotateX(-90deg) translateY(3rem);
    transform-origin: 100% 100%;
  }
  .cube:before {
    background: linear-gradient(180deg, transparent, #031e30);
    // background-color: rgba(0, 110, 110, .6);
    transform: rotateY(90deg) translateX(3rem);
    transform-origin: 100% 0;
  }
  .cube:nth-child(1) {
    animation-delay: 0.05s;
  }
  .cube:nth-child(2) {
    animation-delay: 0.1s;
  }
  .cube:nth-child(3) {
    animation-delay: 0.15s;
  }
  .cube:nth-child(4) {
    animation-delay: 0.2s;
  }
  .cube:nth-child(5) {
    animation-delay: 0.25s;
  }
  .cube:nth-child(6) {
    animation-delay: 0.3s;
  }
  .cube:nth-child(7) {
    animation-delay: 0.35s;
  }
  .cube:nth-child(8) {
    animation-delay: 0.4s;
  }
  .cube:nth-child(9) {
    animation-delay: 0.45s;
  }
}


@keyframes anim {
  50% {
    transform: translateZ(-20px);
  }
}

